# rema-blue-plate

./: .env.global  .gitignore  ReadME.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json
backend/: .env  .env.global  README.md  main.py  pyproject.toml  requirements.txt  run.py  start.bat  start.sh  test_backend.py  test_simple.py
backend/agent/: agent.py  requirements.txt
backend/agent/utils/: nodes.py  state.py  tools.py
backend/app/: config.py
backend/app/api/: agent.py  meals.py  recipes.py  shopping.py  users.py
backend/app/core/: database.py
backend/app/models/: __init__.py  chat.py  recipe.py  shopping.py  user.py
backend/app/schemas/: __init__.py
backend/app/services/: edamam_service.py  ingredient_parser.py  session_service.py  shopping_service.py  user_service.py
backend/databases/: preferences.json  productss.json  recepies.json  users.json
frontend/: .env.global  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
public/: simulator.html
src/: App.tsx  index.css  vite-env.d.ts
src/components/: ChatWidget.tsx  FindMyIngredient.tsx  FridgeMode.tsx  Header.tsx  Hero.tsx  HuggingFaceChat.tsx  MealCard.tsx  MealPlanningMode.tsx  ShoppingList.tsx  ShoppingMap.tsx  ToggleShopping.tsx  WeeklyPlanner.tsx
src/contexts/: ChatContext.tsx  NotificationContext.tsx  PreferencesContext.tsx  ShoppingContext.tsx  useChatContext.ts
src/hooks/: useDirectionWS.ts
src/pages/: Index.tsx  Profile.tsx  ShoppingPage.tsx
src/services/: api.ts
src/utils/: angle.ts
(+28 files in other folders)
