[project]
name = "rema-blue-plate-backend"
version = "0.1.0"
description = "AI-powered meal planning backend with recipe search and dietary filtering"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.26.0",
    "langchain>=0.1.0",
    "langgraph>=0.0.20",
    "langchain-openai>=0.0.5",
]
